--- a/public/index.html
+++ b/public/index.html
@@ -8,15 +8,14 @@
       href="./assets/imgs/raio.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css" />
+    <link rel="stylesheet" href="style.css" />
     <title>Zap Recall</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div class="root"></div>
 
-    
     <script src="https://unpkg.com/ionicons@5.4.0/dist/ionicons.js"></script>
   </body>
 </html>
